src/main/java/com/example/martastraszewska/error/GithubRepoNotFoundException.java
package com.example.martastraszewska.error;

public class GithubRepoNotFoundException extends RuntimeException{

    public GithubRepoNotFoundException(String message) {
        super(message);
    }
}
